Improve users table styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1228,6 +1228,10 @@ body.controller_users.action_show .user-thumbnail-large .validated-icon {
   cursor:pointer;
 }
 
+.users-table .modal-body .btn{
+  margin-right:10px;
+}
+
 
 /*========== Comments ==========*/
 
