--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -13,6 +13,7 @@
           Users
         %ul.unstyled
           %li=link_to "Manage users", users_path
+          %li=link_to "Inactive users", inactive_users_path
           %li=link_to "Users map", map_users_path
     .span4        
       .well
