--- a/app/views/home/_cycled_columns.html.haml
+++ b/app/views/home/_cycled_columns.html.haml
@@ -6,7 +6,7 @@
         =select_tag "distance", options_for_select(["1 mile", "2 miles", "3 miles", "5 miles"])
         =label_tag "postcode"
         =text_field_tag(:postcode)
-        =submit_
+        =submit_tag "Filter"
   .span6
     -if current_user.try(:fully_registered?)
       =link_to "I'd like some help", new_need_path, :class=>"btn call-to-action primary"
