--- a/app/views/user_mailer/new_group_post.html.haml
+++ b/app/views/user_mailer/new_group_post.html.haml
@@ -2,9 +2,9 @@
 %html
   %body
     %p
-      ="Dear #{@group.owner.first_name},"
+      ="Dear #{@member.first_name},"
     %p
-      ="#{@member} has posted in your group <strong>#{@group}</strong>.".html_safe
+      ="#{@user} has posted in the group <strong>#{@group}</strong>.".html_safe
     %p
       =link_to("View the group", group_url(@group))
     %p
