Fix urls on forum post mailer

--- a/app/views/user_mailer/new_forum_post.html.haml
+++ b/app/views/user_mailer/new_forum_post.html.haml
@@ -6,7 +6,7 @@
     %p
       ="#{@user} has posted in the Neighbourhood Discussion Forum."
     %p
-      =link_to("Go to the neighbourhood discussion forum", neighbourhood_posts_path(:neighbourhood => "sheffield"))
+      =link_to("Go to the neighbourhood discussion forum", neighbourhood_posts_url(:neighbourhood => "sheffield"))
     %p
       Thanks,
     %p
