--- a/app/views/user_mailer/new_forum_post.text.erb
+++ b/app/views/user_mailer/new_forum_post.text.erb
@@ -2,7 +2,7 @@ Dear <%=@member.first_name%>,
     
 <%=@user%> has posted in the Neighbourhood Discussion Forum.
   
-<%=link_to("Go to the neighbourhood discussion forum", neighbourhood_posts_path(:neighbourhood => "sheffield"))%>
+<%=link_to("Go to the neighbourhood discussion forum", neighbourhood_posts_url(:neighbourhood => "sheffield"))%>
   
 Thanks,
   
