--- a/app/views/users/_table.html.haml
+++ b/app/views/users/_table.html.haml
@@ -3,28 +3,28 @@
     %tr
       %th=sortable "Full name", tab
       %th Address
-      %th=sortable "Validation Code", tab
+      %th=sortable "Postcode", tab
       %th Gender
       %th=sortable "Date of birth", tab
       %th=sortable "Email address", tab
       %th Phone number
       -unless tab == "group_users" || tab == "pre-registered" || tab == "not_in_sheffield"
-        %th=sortable(tab == "unvalidated" ? 'Requested validation by' : 'Validated by', tab)
+        %th=sortable "Method"
       -unless tab == "unvalidated" || tab == "group_users" || tab == "pre-registered" || tab == "not_in_sheffield"
         %th=sortable "Organisation name", tab
         %th=sortable "Neighbourhood champion?", tab
         %th=sortable "Requested to be a champion?", tab
         %th=sortable "Assigned neighbourhood champion?", tab
+      %th=sortable "Validation Code", tab
       -if tab == "unvalidated"
-        %th="Sent activation code"
+        %th="Sent code"
       %th Actions
     -users.each do |user|
       -if current_user.admin? || user.try(:neighbourhood).try(:admin_id) == current_user.id
         %tr
           %td=full_name_and_role(user)
-          %td=user.address
-          %td
-            %code=user.validation_code
+          %td=user.address_without_postcode
+          %td=user.postcode
           %td=user.gender.titleize
           %td=user.dob.present? ? user.dob.to_s(:date) : "not disclosed"
           %td=user.email.presence || '-'
@@ -36,11 +36,13 @@
             %td=user.is_community_champion? ? 'Yes' : 'No'
             %td=user.champion_request_at.present? ? 'Yes' : 'No'
             %td=user.community_champion.try(:full_name) || '-'
+          %td
+            %code=user.validation_code
           -if tab == "unvalidated"
             %td
               -if user.validate_by == 'post'
                 -if user.sent_activation_code_at?
-                  =user.sent_activation_code_at.strftime("%d %b %y %H:%M")
+                  =user.sent_activation_code_at.strftime("%d %b %y")
                 -else
                   =link_to "Mark sent", send_activation_code_user_path(user), :method => :put
               -else
