--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -30,18 +30,18 @@
           ="There isn't a neighbourhood champion for #{first_name_or_your(@user)} area - #{link_to 'ask to become one', request_to_be_champion_user_path, :method => :put}".html_safe
 
     -if current_user == @user
-      %h3.block.mb-1
+      %h3.block.profile-title
         These details are public
-    .mb-1
-      -if current_user == @user
-        %h4 Bio
-      -if @user.bio.present?
-        =simple_format(@user.bio)
-      -elsif current_user == @user
-        %span.italic Nothing entered yet.
-      .action-link
-        =link_to("Edit", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
-    .mb-1
+    .profile-details.mb-2
+      .mb-1
+        -if current_user == @user
+          %h4 Bio
+        -if @user.bio.present?
+          =simple_format(@user.bio)
+        -elsif current_user == @user
+          %span.italic Nothing entered yet.
+        .action-link
+          =link_to("Edit", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
       -if @user.skills.present? || current_user == @user
         %h4 Skills
         -if @user.skills.present?
@@ -54,42 +54,43 @@
           =link_to("Edit", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
 
     -if current_user == @user
-      %h3.block.mb-1
+      %h3.block.profile-title.profile-title-private
         These details are private
         %br
         %small Your private details will not be shared with anyone.
     -if current_user == @user
-      .mb-1
-        %h4 Date of birth
-        =@user.dob.nil? ? 'Not set yet.' : @user.dob.to_s(:date)
-        .action-link
-          =link_to("Edit", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
-      .mb-1
-        %h4 Email
-        =@user.email
-      .mb-1
-        %h4 Address
-        =@user.address
-        .action-link
-          =link_to("Edit", edit_user_path(@user, :anchor => "where_you_live")) if can?(:edit, @user)
-      .mb-1
-        %h4 Phone number
-        -if @user.phone.present?
-          =@user.phone
-        -else
-          %span.italic Nothing entered yet.
-        .action-link
-          =link_to("Edit", edit_user_path(@user, :anchor => "where_you_live")) if can?(:edit, @user)
-      .mb-1
-        %h4 Notifications
-        %p
-          You
-          =@user.no_notifications? ? "won't" : 'will'
-          receive emails related to your requests, offers and groups.
-        %p
-          =switch_text(@user).html_safe.sub('You can change these settings using the button.', '')
-        .action-link
-          =link_to("Edit settings", edit_user_path(@user, :anchor => "notifications")) if can?(:edit, @user)
+      .profile-details.profile-details-private
+        .mb1
+          %h4 Date of birth
+          =@user.dob.nil? ? 'Not set yet.' : @user.dob.to_s(:date)
+          .action-link
+            =link_to("Edit", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
+        .mb-1
+          %h4 Email
+          =@user.email
+        .mb-1
+          %h4 Address
+          =@user.address
+          .action-link
+            =link_to("Edit", edit_user_path(@user, :anchor => "where_you_live")) if can?(:edit, @user)
+        .mb-1
+          %h4 Phone number
+          -if @user.phone.present?
+            =@user.phone
+          -else
+            %span.italic Nothing entered yet.
+          .action-link
+            =link_to("Edit", edit_user_path(@user, :anchor => "where_you_live")) if can?(:edit, @user)
+        .mb-1
+          %h4 Notifications
+          %p
+            You
+            =@user.no_notifications? ? "won't" : 'will'
+            receive emails related to your requests, offers and groups.
+          %p
+            =switch_text(@user).html_safe.sub('You can change these settings using the button.', '')
+          .action-link
+            =link_to("Edit settings", edit_user_path(@user, :anchor => "notifications")) if can?(:edit, @user)
 
     -if @user.groups.present?
       %h4.mt-2.mb-1 Groups
