--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -18,6 +18,7 @@
         You're not fully registered. You can access more features if you
         =link_to("complete your registration", new_registration_path)
     %h1.mb-1=title(@user)
+    %p.mb-1.deleted-user="This user has been deleted" if @user.is_deleted?
     %h3.block.mb-2
       -if @user.is_community_champion?
         ="#{first_name_or_you(@user, 'is', 'are').capitalize} a neighbourhood champion"
