--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -443,14 +443,14 @@ br.clear {
 }
 
 .flash_container .alert {
-  margin-bottom:0px;
+  margin-bottom: 0px;
   background: none;
   padding: 20px;
   border: none;
-  color: #fff;
-
-  text-shadow: none;
-  font-weight: bold;  
+  color: #3a3a3a;
+  text-shadow: 1px 1px 0px rgba(255,255,255,0.9);
+  font-weight: bold;
+  word-spacing: 2px; 
 }
 .flash_container .span12 {
   margin: 0 auto;
