Use full names in group request, join & messaging

--- a/app/views/user_mailer/new_group_member.text.erb
+++ b/app/views/user_mailer/new_group_member.text.erb
@@ -1,6 +1,6 @@
 Dear <%=@admin_email ? 'site admin' : @group.owner.first_name%>,
 
-<%=@member%> has joined <%=@admin_email ? 'the' : 'your'%> group <%=@group%>:
+<%=@member.full_name%> has joined <%=@admin_email ? 'the' : 'your'%> group <%=@group%>:
 
 <%=group_url(@group)%>
 
