--- a/app/views/user_mailer/group_request.html.haml
+++ b/app/views/user_mailer/group_request.html.haml
@@ -4,7 +4,7 @@
     %p
       ="Dear #{@group_owner.first_name},"
     %p
-      ="#{@group_request.user} has requested to join the group <strong>#{@group_request.group}</strong>.".html_safe
+      ="#{@group_request.user.full_name} has requested to join the group <strong>#{@group_request.group}</strong>.".html_safe
     %p
       =link_to("View all the join requests", group_group_requests_url(@group_request.group))
     %p
