--- a/app/views/user_mailer/group_request.text.erb
+++ b/app/views/user_mailer/group_request.text.erb
@@ -1,6 +1,6 @@
 <%="Dear #{@group_owner.first_name},"%>
 
-<%=@group_request.user%> has requested to join the group '<%=@group_request.group%>'.
+<%=@group_request.user.full_name%> has requested to join the group '<%=@group_request.group%>'.
 
 View all the join requests: <%=group_group_requests_url(@group_request.group)%>
 
