Drop Sheffield to second line in footer address

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,7 +3,10 @@
     .row
       .span4
         %p &copy; Neighbours Can Help Ltd
-        %p Provincial House, Solly Street, Sheffield S1 4BA
+        %p
+          Provincial House, Solly Street
+          %br
+          Sheffield S1 4BA
         %ul.unstyled.footer-links.mt-2
           %li
             =link_to_slug(:help, :class=>"") do
