--- a/app/views/modals/_validation_prompt.html.haml
+++ b/app/views/modals/_validation_prompt.html.haml
@@ -3,7 +3,7 @@
     %h3 Before you go any further...
   .modal-body  
     %p
-      You'll need to validate your account and accept our terms and conditions.
+      You'll need to validate your account and accept our terms and conditions and privacy policy.
   .modal-footer
     =link_to "Log out", sign_out_path, :method => :delete, :class => "btn pull-left"
     =link_to "Ok", "#", :class => "btn btn-primary", :"data-dismiss" => "modal"
