--- a/app/views/layouts/logged_in/_header.html.haml
+++ b/app/views/layouts/logged_in/_header.html.haml
@@ -85,7 +85,7 @@
               %p.control-panel-subtitle
                 =header_messages_badge(current_user.unread_message_count)
           .span3
-            =link_to messages_path, :class=>"control-panel-link" do
+            =link_to messages_path(:context => "NCH"), :class=>"control-panel-link" do
               %h3.control-panel-title
                 The NCH team
               %p.control-panel-subtitle
