--- a/app/views/needs/_post.html.haml
+++ b/app/views/needs/_post.html.haml
@@ -24,6 +24,10 @@
               =link_to accept_offer_path(offer), :class=>"post-action" do
                 %i.icon-ok
                 Accept this offer
+            -elsif @need.accepted_offer.nil? && logged_in_as?(offer.user)
+              =link_to remove_offer_path(offer), :class=>"post-action", :confirm => "Are you sure you want to withdraw your offer?" do
+                %i.icon-remove
+                Withdraw my offer
   .comments
     .comment-list
       =render(:partial => "comments/comment", :collection => post.comments)
