--- a/app/views/general_offers/show.html.haml
+++ b/app/views/general_offers/show.html.haml
@@ -32,7 +32,7 @@
       .mt1
         -if @general_offer.user.validated?
           -if current_user.validated?
-            =link_to("Accept #{@general_offer.user}'s offer", accept_general_offer_path(@general_offer), :method => :post, :class => 'btn btn-primary')
+            =link_to("Accept #{@general_offer.user}'s offer", accept_general_offer_path(@general_offer), :method => :post, :class => 'btn btn-primary') unless current_user == @general_offer.user
           -elsif current_user.pre_registration? || current_user.group_user?
             %p.bold
               You will be able to accept this offer once you are
