--- a/app/views/neighbourhoods/stats.html.haml
+++ b/app/views/neighbourhoods/stats.html.haml
@@ -10,7 +10,7 @@
         %th Description      
         %th=sortable "Category"
         %th Offers made
-        %th
+        %th Details
     %tbody
       -@needs_open.each do |need|
         %tr
@@ -20,6 +20,9 @@
           %td=read_more_truncate(need.description, :length => 50)
           %td=need.category
           %td=need.offers.count
+          %td=link_to "View details", "#open-need#{need.id}", :'data-toggle'=>"modal"
+        .modal.hide.fade{:id => "open-need#{need.id}"}
+          =render('details_modal', :resource => need)
 -else
   %p No needs open.
 %h2 Needs Resolved
@@ -34,6 +37,7 @@
         %th Description
         %th=sortable "Category"
         %th Offers made
+        %th Details
     %tbody
       -@needs_resolved.each do |need|
         %tr
@@ -44,6 +48,9 @@
           %td=read_more_truncate(need.description, :length => 50)
           %td=need.category
           %td=need.offers.count
+          %td=link_to "View details", "#resolved-need#{need.id}", :'data-toggle'=>"modal"
+        .modal.hide.fade{:id => "resolved-need#{need.id}"}
+          =render('details_modal', :resource => need)
 -else
   %p No needs resolved.
 %h2 Needs Removed
@@ -58,6 +65,7 @@
         %th=sortable "Category"
         %th Offers made
         %th=sortable "Resolved"
+        %th Details
     %tbody
       -@needs_removed.each do |need|
         %tr
@@ -68,6 +76,9 @@
           %td=need.category
           %td=need.offers.count
           %td=need.offers.count > 0 ? need.has_accepted_offer? : "-"
+          %td=link_to "View details", "#removed-need#{need.id}", :'data-toggle'=>"modal"
+        .modal.hide.fade{:id => "removed-need#{need.id}"}
+          =render('details_modal', :resource => need)
 -else
   %p No removed needs.
 %h2 Offers Open
@@ -81,6 +92,7 @@
         %th=sortable "Date/Time"
         %th Need request description
         %th=sortable 'Need category'
+        %th Details
     %tbody
       -@offers_open.each do |offer|
         %tr
@@ -90,6 +102,9 @@
           %td.date-time=offer.created_at.strftime("%d %b %y %H:%M")
           %td=read_more_truncate(offer.need.description, :length => 50)
           %td=offer.category
+          %td=link_to "View details", "#open-offer#{offer.id}", :'data-toggle'=>"modal"
+        .modal.hide.fade{:id => "open-offer#{offer.id}"}
+          =render('details_modal', :resource => offer)
 -else
   %p No offers open.
 %h2 Offers Accepted
@@ -103,6 +118,7 @@
         %th=sortable "Date/Time"
         %th Need request description
         %th=sortable 'Need category'
+        %th Details
     %tbody
       -@offers_accepted.each do |offer|
         %tr
@@ -112,6 +128,9 @@
           %td.date-time=offer.created_at.strftime("%d %b %y %H:%M")
           %td=read_more_truncate(offer.need.description, :length => 50)
           %td=offer.category
+          %td=link_to "View details", "#accepted-offer#{offer.id}", :'data-toggle'=>"modal"
+        .modal.hide.fade{:id => "accepted-offer#{offer.id}"}
+          =render('details_modal', :resource => offer)
 -else
   %p No offers accepted.
 %h2 Offers Removed
@@ -126,6 +145,7 @@
         %th Need request description            
         %th=sortable "Accepted"
         %th=sortable 'Need category'
+        %th Details
     %tbody
       -@offers_removed.each do |offer|
         %tr
@@ -136,5 +156,8 @@
           %td=read_more_truncate(offer.need.description, :length => 50)
           %td=offer.accepted? ? 'Yes' : 'No'
           %td=offer.category
+          %td=link_to "View details", "#removed-offer#{offer.id}", :'data-toggle'=>"modal"
+        .modal.hide.fade{:id => "removed-offer#{offer.id}"}
+          =render('details_modal', :resource => offer)
 -else
   %p No offers removed.
