--- a/app/views/neighbourhoods/stats.html.haml
+++ b/app/views/neighbourhoods/stats.html.haml
@@ -87,8 +87,8 @@
     %thead
       %tr
         %th ID
-        %th=sortable "Person who offered"
-        %th=sortable "Person who needed"
+        %th=sortable "Person Who offered"
+        %th=sortable "Person Who needed"
         %th=sortable "Date/Time"
         %th Need request description
         %th=sortable 'Need category'
