--- a/app/views/neighbourhoods/all_stats.html.haml
+++ b/app/views/neighbourhoods/all_stats.html.haml
@@ -41,6 +41,9 @@
                   %td.date-time=offer.created_at.strftime("%d %b %y %H:%M")
                   %td=read_more_truncate(offer.description, :length => 50)
                   %td=offer.category
+                  %td=link_to "View details", "#general-offer#{offer.id}", :'data-toggle'=>"modal"
+                .modal.hide.fade{:id => "general-offer#{offer.id}"}
+                  =render('details_modal', :resource => offer)
         -else
           %p No general offers.
         %h2 Removed General Offers
@@ -62,5 +65,8 @@
                   %td.date-time=offer.removed_at.strftime("%d %b %y %H:%M")
                   %td=read_more_truncate(offer.description, :length => 50)
                   %td=offer.category
+                  %td=link_to "View details", "#removed-general-offer#{offer.id}", :'data-toggle'=>"modal"
+                .modal.hide.fade{:id => "removed-general-offer#{offer.id}"}
+                  =render('details_modal', :resource => offer)
         -else
           %p No removed general offers.
