--- a/app/views/needs/_post.html.haml
+++ b/app/views/needs/_post.html.haml
@@ -15,21 +15,21 @@
               .post-action
                 %i.icon-comment-alt
                 You can respond when we have validated your account
-            -elsif offer.accepted? && logged_in_as?(@need.user, offer.user)
+            -elsif offer.accepted? && logged_in_as?(@need.user, offer.user) && post.context != 'chat'
               %span.badge.badge-success Accepted
               =link_to reject_offer_path(offer), :class=>"post-action" do
                 %i.icon-remove
                 Un-accept
-            -elsif @need.accepted_offer.nil? && logged_in_as?(@need.user)
+            -elsif @need.accepted_offer.nil? && logged_in_as?(@need.user) && post.context != 'chat'
               =link_to accept_offer_path(offer), :class=>"post-action" do
                 %i.icon-ok
                 Accept this offer
-            -elsif @need.accepted_offer.nil? && logged_in_as?(offer.user)
+            -elsif @need.accepted_offer.nil? && logged_in_as?(offer.user) && post.context != 'chat'
               =link_to remove_offer_path(offer), :class=>"post-action", :confirm => "Are you sure you want to withdraw your offer?" do
                 %i.icon-remove
                 Withdraw my offer
   .comments
     .comment-list
       =render(:partial => "comments/comment", :collection => post.comments)
-    -if logged_in_as?(@need.user, @offers.collect(&:user)) && current_user.validated?
+    -if logged_in_as?(@need.user, @offers.collect(&:user), @need.posts.collect(&:user)) && current_user.validated?
       =render("comments/form", :comment => post.comments.build) 
